User model fix, update and remove avatar logic fixed, file updateFavoriteNotice,js renamed, swagger in progress
