# swagger.json
@@ -44,7 +44,7 @@
         "summary": "User registration",
         "parameters": [],
         "requestBody": {
-          "description": "<b>DESCRIPTION OF QUERY PARAMETERS:</b><br> <br><b>*email</b> - string, the user's email address.  Pattern: /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[^_.-]w+([.-]?w+)*(.w{2,3})+$/ <br> <br> <b>*password</b> - string, user password. Must contain min 7, max 32 characters, at least 1 uppercase letter, 1 lowercase letter, and 1 number <br>Pattern: /(?!s)^[^ ]{7,32}$/ <br><br><b>All fields are required!</b>",
+          "description": "<b>*email</b> - string, the user's email address.  Pattern: /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[^_.-]w+([.-]?w+)*(.w{2,3})+$/ <br> <br> <b>*password</b> - string, user password. Must contain min 7, max 32 characters, at least 1 uppercase letter, 1 lowercase letter, and 1 number <br>Pattern: /(?!s)^[^ ]{7,32}$/ <br><br><b>All fields are required!</b>",
           "required": true,
           "content": {
             "application/json": {
@@ -156,7 +156,7 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "The data was fetched successfully <br><br><b>DESCRIPTION OF RESPONSE PARAMETERS:</b> <br><br> <b>id</b> - string, user id <br><br><b>name</b> - string, the user's name. It can contain only Latin and Cyrillic letters, the apostrophe symbol, spaces and hyphens. <br>pattern /^[a-zA-Zа-яА-Я' -]+$/</b> <br><br><b>email</b> - string, the user's email address.  Pattern: /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[^_.-]w+([.-]?w+)*(.w{2,3})+$/ <br><br> <b>phone</b> - string, user phone number. Can contain: any number, plus symbol, opening and closing bracket symbols, hyphen (minus) character, space character.Pattern: /^+380d{9}$/ <br><br> <b>city</b> - string, user city. Must contain min 2, max 100. It can contain only Latin and Cyrillic letters, as well as separators in the form of a space or hyphen. At the same time, it does not allow a delimiter string to begin or end and does not allow the use of two delimiters in a row. <br>Pattern: /^[a-zA-Zа-яА-Я]+(?:[s-][a-zA-Zа-яА-Я]+)*$/ <b>birthday</b> - date, the user's birthday. max date - now, example format: 1980-04-15T00:00:00.000Z</b><br><br> <b>avatarURL</b> - string, the path to the uploaded user avatar <br><br> ",
+            "description": "The data was fetched successfully <br><br> <b>DESCRIPTION OF RESPONSE PARAMETERS:</b> <br><br> <b>id</b> - string, user _id <br><br><b>name</b> - string, the user's name. It can contain only Latin and Cyrillic letters, the apostrophe symbol, spaces and hyphens. <br>pattern /^[a-zA-Zа-яА-Я' -]+$/</b> <br><br><b>email</b> - string, the user's email address.  Pattern: /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[^_.-]w+([.-]?w+)*(.w{2,3})+$/ <br><br> <b>phone</b> - string, user phone number. Pattern: /^+380d{9}$/ <br><br> <b>city</b> - string, user city. Must contain min 2, max 100. It can contain only Latin and Cyrillic letters, as well as separators in the form of a space or hyphen. At the same time, it does not allow a delimiter string to begin or end and does not allow the use of two delimiters in a row. <br>Pattern: /^[a-zA-Zа-яА-Я]+(?:[s-][a-zA-Zа-яА-Я]+)*$/ <br><br><b>birthday</b> - string, the user's birthday. Date format: DD-MM-YYYY</b><br><br> <b>avatarURL</b> - string, the path to the uploaded user avatar <br><br> <b>imgId</b> - string, cloudinary photo public id <br><br> ",
             "content": {
               "application/json": {
                 "schema": {
@@ -190,7 +190,7 @@
             "content": {}
           },
           "500": {
-            "description": "Server error. Email in use"
+            "description": "Server error"
           }
         }
       }
@@ -206,9 +206,14 @@
         ],
         "parameters": [],
         "requestBody": {
-          "description": "<b>DESCRIPTION OF QUERY PARAMETERS:</b><br><br> <b>avatar</b> - the user's avatar is a photo <b>file</b> no larger than 3Mb",
+          "description": "The data was fetched successfully <br><br> <b>DESCRIPTION OF RESPONSE PARAMETERS:</b> <br><br> <b>id</b> - string, user _id <br><br><b>name</b> - string, the user's name. It can contain only Latin and Cyrillic letters, the apostrophe symbol, spaces and hyphens. <br>pattern /^[a-zA-Zа-яА-Я' -]+$/</b> <br><br><b>email</b> - string, the user's email address.  Pattern: /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[^_.-]w+([.-]?w+)*(.w{2,3})+$/ <br><br> <b>phone</b> - string, user phone number. Pattern: /^+380d{9}$/ <br><br> <b>city</b> - string, user city. Must contain min 2, max 100. It can contain only Latin and Cyrillic letters, as well as separators in the form of a space or hyphen. At the same time, it does not allow a delimiter string to begin or end and does not allow the use of two delimiters in a row. <br>Pattern: /^[a-zA-Zа-яА-Я]+(?:[s-][a-zA-Zа-яА-Я]+)*$/ <br><br><b>birthday</b> - string, the user's birthday. Date format: DD-MM-YYYY</b><br><br> <b>avatarURL</b> - string, the path to the uploaded user avatar <br><br> <b>imgId</b> - string, cloudinary photo public id <br><br> ",
           "required": true,
           "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserResponse"
+              }
+            },
             "multipart/form-data": {
               "schema": {
                 "type": "object",
@@ -256,46 +261,20 @@
     "/user/avatars": {
       "patch": {
         "tags": ["User"],
-        "summary": "Update user's avatar",
+        "summary": "Delete user's avatar",
         "security": [
           {
             "Bearer": []
           }
         ],
         "parameters": [],
-        "requestBody": {
-          "description": "<b>DESCRIPTION OF QUERY PARAMETERS:</b><br><br> <b>avatar</b> - the user's avatar is a photo <b>file</b> no larger than 3Mb",
-          "required": true,
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "avatar": {
-                    "required": true,
-                    "type": "string",
-                    "format": "binary",
-                    "description": "Select a JPEG or PNG image file."
-                  }
-                }
-              }
-            }
-          }
-        },
         "responses": {
           "200": {
-            "description": "Avatar successfully modified <br><br><b>DESCRIPTION OF RESPONSE PARAMETERS:</b><br><br> <b>avatarURL</b> - string, the path to the uploaded user avatar",
+            "description": "Avatar successfully deleted <br><br>",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "avatarURL": {
-                      "type": "string",
-                      "description": "The URL of the updated avatar image",
-                      "example": "https://res.cloudinary.com/yourpet/image/upload/v1684522847/users-avatars/vtpvot36i0ayt55nsip0.jpg"
-                    }
-                  }
+                  "$ref": "#/components/schemas/UserResponse"
                 }
               }
             }
@@ -305,44 +284,7 @@
             "content": {}
           },
           "500": {
-            "description": "Failed to update image in Cloudinary",
-            "content": {}
-          }
-        }
-      }
-    },
-    "/user/refresh-token": {
-      "post": {
-        "tags": ["User"],
-        "summary": "Refresh token",
-        "security": [
-          {
-            "Bearer": []
-          }
-        ],
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "Refresh token",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "required": ["email"],
-                  "properties": {
-                    "token": {
-                      "type": "string",
-                      "format": "email",
-                      "description": "User token",
-                      "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0NjVkMjQ4MzI2M2Y1MTkxMTU1ZjFmNyIsImlhdCI6MTY4NDM5NDg1OSwiZXhwIjoxNjg0NDU5NjU5fQ.F71-KcfaP9gt7bNNuQJA_EUF-xkURvhRaLkv1AE55OY"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Not authorized",
+            "description": "Failed to update image",
             "content": {}
           }
         }
@@ -1284,13 +1226,13 @@
           }
         }
       },
-      "UserRequest": {
+      "UpdateUserRequest": {
         "type": "object",
         "example": {
-          "email": "use5555r@exampl.com",
-          "birthday": "1980-04-15",
-          "name": "Helen",
-          "phone": "+380678884455",
+          "email": "pulazu@mailinator.com",
+          "birthday": "22-01-2001",
+          "name": "Paul",
+          "phone": "+380937654321",
           "city": "Lviv"
         },
         "anyOf": {
@@ -1305,15 +1247,19 @@
           "birthday": {
             "type": "string",
             "format": "date",
-            "description": "User birthday"
+            "description": "User's birthday"
           },
           "phone": {
             "type": "string",
-            "description": "User phone number"
+            "description": "User's phone number"
           },
           "city": {
             "type": "string",
             "description": "User's city of residence"
+          },
+          "imgId": {
+            "type": "string",
+            "description": "Cloudinary photo public id"
           }
         }
       },
@@ -1321,107 +1267,60 @@
         "type": "object",
         "required": ["email", "avatarURL"],
         "properties": {
-          "id": {
-            "type": "string",
-            "description": "User id"
-          },
-          "name": {
-            "type": "string",
-            "description": "Username"
-          },
-          "email": {
-            "type": "string",
-            "format": "email",
-            "description": "User email"
-          },
-          "phone": {
-            "type": "string",
-            "description": "User phone number"
-          },
-          "city": {
-            "type": "string",
-            "description": "User's city of residence"
-          },
-          "birthday": {
-            "type": "string",
-            "format": "date",
-            "description": "User birthday"
-          },
-          "avatarURL": {
-            "type": "string",
-            "description": "User's avatar URL"
-          }
-        },
-        "example": {
-          "_id": "645e819f374fda194a78304b",
-          "email": "user@example.com",
-          "avatarURL": "//www.gravatar.com/avatar/209a8b607e9beda3d698c03b03d6729b",
-          "photoPublicId": "users-pets/w25zbc5pzrvgofpugtmy",
-          "favorite": ["6465552466bc396723e59f93"],
-          "birthday": "1980-04-15T00:00:00.000Z",
-          "city": "Lviv",
-          "name": "Helen",
-          "phone": "+380678884455"
-        }
-      },
-      "CurrentResponse": {
-        "type": "object",
-        "required": ["email", "token"],
-        "properties": {
-          "_id": {
-            "type": "string",
-            "description": "User id"
-          },
-          "email": {
-            "type": "string",
-            "format": "email",
-            "description": "User email"
-          },
           "token": {
             "type": "string",
             "description": "User's token",
             "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0NWRlMTIzNTVlNWM4MDM0ODQ0Y2Q0MCIsImlhdCI6MTY4Mzg3NzgyNywiZXhwIjoxNjgzOTQyNjI3fQ.Cl7kfx9Tm-125ffgMKQGOzR9WhTH_dYET1B75hFjZyk"
           },
-          "avatarURL": {
-            "type": "string",
-            "description": "User's avatar URL"
-          },
-          "photoPublicId": {
-            "type": "string",
-            "description": "Cloudinary photo public id"
-          },
-          "favorite": {
-            "type": "array"
-          },
-          "birthday": {
-            "type": "string",
-            "format": "date",
-            "description": "User birthday"
-          },
-          "city": {
-            "type": "string",
-            "description": "User's city of residence"
-          },
-          "name": {
-            "type": "string",
-            "description": "Username"
-          },
-          "phone": {
-            "type": "string",
-            "description": "User phone number"
+          "result": {
+            "id": {
+              "type": "string",
+              "description": "User id"
+            },
+            "name": {
+              "type": "string",
+              "description": "Username"
+            },
+            "email": {
+              "type": "string",
+              "format": "email",
+              "description": "User email"
+            },
+            "phone": {
+              "type": "string",
+              "description": "User phone number"
+            },
+            "city": {
+              "type": "string",
+              "description": "User's city of residence"
+            },
+            "birthday": {
+              "type": "string",
+              "format": "date",
+              "description": "User's birthday"
+            },
+            "avatarURL": {
+              "type": "string",
+              "description": "User's avatar URL"
+            },
+            "imgId": {
+              "type": "string",
+              "description": "Cloudinary photo public id"
+            }
           }
         },
         "example": {
-          "_id": "645e819f374fda194a78304b",
-          "email": "user@example.com",
-          "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0NWRlMTIzNTVlNWM4MDM0ODQ0Y2Q0MCIsImlhdCI6MTY4Mzg3NzgyNywiZXhwIjoxNjgzOTQyNjI3fQ.Cl7kfx9Tm-125ffgMKQGOzR9WhTH_dYET1B75hFjZyk",
-          "avatarURL": "//www.gravatar.com/avatar/209a8b607e9beda3d698c03b03d6729b",
-          "favorite": ["6465552466bc396723e59f93"],
-          "birthday": "1980-04-15T00:00:00.000Z",
-          "city": "Lviv",
-          "name": "Helen",
-          "phone": "+380678884455",
-          "photoPublicId": "users-avatars/crcupjdujufcwfk8bltq"
+          "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0NzQ3NDIzMDE5OWEzMTYzNjQ2Zjc1MyIsImlhdCI6MTY4NTM1MzUwNywiZXhwIjoxNjg1Mzk2NzA3fQ.ZVcw5mxW3ohZcH6jjVWe1XImSMxcAJK21zjUIELYYqk",
+          "result": {
+            "_id": "645e819f374fda194a78304b",
+            "name": "Helga",
+            "email": "user@example.com",
+            "phone": "+380678884455",
+            "city": "Lviv",
+            "birthday": "15-05-2005",
+            "avatarURL": "https://res.cloudinary.com/dc1nv7ign/image/upload/v1685403100/g1vyvmhuvqoxzi6wepkg.png",
+            "imgId": "g1vyvmhuvqoxzi6wepkg"
+          }
         }
       },
       "NoticesRequest": {
